--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body {background-color: cadetblue;}
+        body {background-color: rgb(5, 192, 199);}
+        h1 {color: springgreen;}
     </style>
 </head>
 <body>
