endret tekst i alternativ branch

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1> hallo folkens </h1>
     <p>dette er en html fil</p>
     <p>dette er en endring</p>
+    <p>dette er en alternativ versjon</p>
 </body>
 </html>
