--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <p>dette er en endring</p>
     <p> her er min YT kanal</p>
     <a href="https://youtube.com">HER</a>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro repellendus fugiat fugit officiis alias voluptates sapiente, eos cupiditate autem mollitia quam illo. Fugit saepe corporis facilis velit adipisci! Sit, quod.</p>
 </body>
 </html>
